# rust-examples

./: Cargo.toml
src/: create_phone_number.rs  kata_5_1.rs  kata_5_2.rs  kata_5_3.rs  kata_5_4.rs  kata_6_2.rs  kata_6_3.rs  lib.rs
src/cryptography/: readme.md
src/elgamal/: README.md  elgamal.rs
src/elliptical_curve/: README.md  ec_wrapper.rs
src/fips140/: fips140.rs
src/sha1/: README.md  sha1.rs
