[package]
name = "codewars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
hex = "0.4.3"
hex-literal = "0.4.1"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = "0.1.45"
num-primes = "0.3.0"
num-traits = "0.2.15"
rand = "0.8.5"
secp256k1 = "0.27.0"
sha1 = "0.10.5"
